compilateurDeca/src/test/deca/codegen/invalid/avec_objet/axe1/cast_incompatible_hierarchie.deca
// Description:
//    Cast invalide entre deux classes sans lien de parenté direct (frères).
// Resultats:
//    Erreur : conversion de type impossible
// Historique:
//    cree le 14/01/2026

class Mere {}
class A extends Mere {}
class B extends Mere {}

{
    Mere m = new A();
    B b = (B)(m); // m est un A, le cast vers B doit échouer
}

